engr441/while-jvm/tests/invalid-typing/Typing_Invalid_39.while
void f() {
   int[] x = [ 1, true ];
}